--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_pdfviewer: ^23.1.41
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
